test/resources/typer/passing/ExtLambda10.1.scala
object Lambda {
  val x: String = "";
  val f: Int => Int = \(x: Int) -> x + 1;
  Std.printInt(f(1))
}
